--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -50,7 +52,10 @@
                     <div class="dropdown-tags">
                         <button type="button" class="dropdown-toggle" id="ingredients-button">Ingrédients</button>
                         <div class="dropdown-menu">
+                        <div class="dropdown-input_group">
                           <input type="text" id="ingredients-search" class="dropdown-search">
+                            <button type="button" class="btn"><i class="bi bi-search text-secondary"></i></button>
+                        </div>
                           <div class="dropdown-options" id="ingredients-options"></div> 
                         </div>
                     </div>
@@ -76,7 +81,7 @@
                 <div class="col text-end recipes-counter fw-bold" id="recipes-counter"></div>
             </div>
 
-            <div clas="row py-5 bg-light tags-container">
+            <div class="row py-5 bg-light tags-container">
                 
             </div>
         </section>
